--- a/RideWebApi/appsettings.json
+++ b/RideWebApi/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EmailConfiguration": {
+    "From": "manojbhosale71@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "manojbhosale71@gmail.com",
+    "Password": "Manoj@123"
+  },
   "AllowedHosts": "*"
 }
