--- a/RideWebApi/appsettings.json
+++ b/RideWebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.; Initial Catalog=mydb; Persist Security Info=True;User ID=manoj;Password=its@ok"
+    "DefaultConnection": "Data Source=.; Initial Catalog=mydb; Persist Security Info=True; User ID=manoj;Password=itsnick"
   },
   "Logging": {
     "LogLevel": {
