--- a/RideWebApi/appsettings.json
+++ b/RideWebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.; Initial Catalog=mydb; Persist Security Info=True; User ID=manoj;Password=itsnick"
+    "DefaultConnection": "Data Source=.; Initial Catalog=datadb; Persist Security Info=True; User ID=manoj;Password=itsnick"
   },
   "Logging": {
     "LogLevel": {
@@ -9,12 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "EmailConfiguration": {
-    "From": "manojbhosale71@gmail.com",
-    "SmtpServer": "smtp.gmail.com",
-    "Port": 465,
-    "Username": "manojbhosale71@gmail.com",
-    "Password": "Manoj@123"
+  "EmailSettings": {
+    "Mail": "nick96j@gmail.com",
+    "DisplayName": "Ride",
+    "Password": "manojdon",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   },
   "AllowedHosts": "*"
 }
